--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -225,6 +225,17 @@ iframe {
     color: var(--light-text-color);
 }
 
+.text-primary {
+    color: var(--primary-color)!important;
+}
+
+.bg {
+    &-primary {
+        background-color: var(--primary-color)!important;
+        color: var(--white-color);
+    }
+}
+
 .was-validated .form-control.is-invalid {
     border-color: #dc3545;
     box-shadow: 0 0 0 0.25rem rgba(220,53,69,.25);
