Update User Management

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -828,3 +828,185 @@ footer .row .col-md-10 {
     font-size: 0.8rem;
     padding: 20px 0;
 }
+//user management
+.avatar-img {
+    width: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+    margin-left: 30px;
+}
+.img-top {
+    width: 100%;
+    height: auto;
+}
+.container {
+    width: 100%;
+    padding-right: 12px;
+    padding-left: 12px;
+    margin-right: auto;
+    margin-left: auto;
+}
+.header-body {
+    padding-top: 1.5rem
+;
+    padding-bottom: 1.5rem;
+    border-bottom: 1px solid #e3ebf6;
+}
+.align-items-end {
+    align-items: flex-end!important;
+}
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -12px;
+    margin-left: -12px;
+}
+.col-auto {
+    flex: 0 0 auto;
+    width: auto;
+    max-width: 100%;
+}
+.border-body {
+    border-color: #f9fbfd!important;
+}
+.border-4 {
+    border-width: 4px!important;
+}
+.rounded-circle {
+    border-radius: 50%!important;
+}
+.border {
+    border: 1px solid #e3ebf6!important;
+}
+img, svg {
+    vertical-align: middle;
+}
+.header-title{
+    font-family: 'Nunito', sans-serif;
+    font-size: 26px;
+    color: #12263F;
+    text-align: left;
+    margin-bottom: 0;
+    margin-top: 30px;
+    margin-left: 30px;
+}
+.avatar-img-lg{
+    width: 100px;
+    border-radius: 50%;
+    cursor: pointer;
+    
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #edf2f9;
+    border-radius: 0.5rem;
+    margin-bottom: 1.5rem;
+    border-color: #edf2f9;
+    box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
+}
+
+
+.card {
+    margin-bottom: 1.5rem;
+    border-color: #edf2f9;
+    box-shadow: 0 0.75rem 1.5rem rgba(18,38,63,.03);
+}
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid #edf2f9;
+    border-radius: 0.5rem;
+}
+*, :after, :before {
+    box-sizing: border-box;
+}
+.card-body {
+    flex: 1 1 auto;
+    padding: 1.5rem;
+}
+
+div {
+    display: block;
+}
+body {
+    margin: 0;
+    font-family: 'Nunito',sans-serif;
+    font-size: .9375rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #12263f;
+    text-align: left;
+    background-color: #f9fbfd;
+}
+.form-group {
+    margin-bottom: 1.375rem;
+}
+label {
+    display: inline-block;
+    margin-bottom: 0.5rem;
+}
+.custom-file, .custom-file-input {
+    position: relative;
+    width: 100%;
+    height: calc(1.5em + 1rem + 2px);
+}
+.custom-file {
+    display: inline-block;
+    margin-bottom: 0;
+}
+.custom-file-input {
+    z-index: 2;
+    margin: 0;
+    opacity: 0;
+}
+.custom-file-input {
+    position: relative;
+    width: 100%;
+    height: calc(1.5em + 1rem + 2px);
+}
+button, input {
+    overflow: visible;
+}
+.custom-file-label, .custom-file-label:after {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 0.5rem 0.75rem;
+    line-height: 1.5;
+    color: #12263f;
+    background-color: #fff;
+}
+.custom-file-label {
+    left: 0;
+    z-index: 1;
+    height: calc(1.5em + 1rem + 2px);
+    font-weight: 400;
+    border: 1px solid #d2ddec;
+    border-radius: 0.375rem;
+}
+.custom-file-label:after {
+    bottom: 0;
+    z-index: 3;
+    display: block;
+    height: calc(1.5em + 1rem);
+    content: "Browse";
+    border-left: inherit;
+    border-radius: 0 0.375rem 0.375rem 0;
+}
+
+.btn-dark {
+    color: #ffffff;
+    background-color: #12263f;
+    border-color: #12263f;
+}
